RESOLVED FIXED132427
Fix trivial debug-only race-that-crashes in CallLinkStatus and explain why the remaining races are totally awesome
https://bugs.webkit.org/show_bug.cgi?id=132427
Summary Fix trivial debug-only race-that-crashes in CallLinkStatus and explain why th...
Filip Pizlo
Reported 2014-05-01 08:37:32 PDT
Patch forthcoming.
Attachments
the patch (2.47 KB, patch)
2014-05-01 08:38 PDT, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2014-05-01 08:38:38 PDT
Created attachment 230580 [details] the patch
Mark Hahnenberg
Comment 2 2014-05-01 08:41:57 PDT
Comment on attachment 230580 [details] the patch r=me
Filip Pizlo
Comment 3 2014-05-01 08:48:48 PDT
Note You need to log in before you can comment on or make changes to this bug.