Fix trivial debug-only race-that-crashes in CallLinkStatus and explain why the remaining races are totally awesome https://bugs.webkit.org/show_bug.cgi?id=132427

Reviewed by Mark Hahnenberg.

* bytecode/CallLinkStatus.cpp:
(JSC::CallLinkStatus::computeFor):



Canonical link: https://commits.webkit.org/150460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168101 268f45cc-cd09-0410-ab3c-d52691b4dbfc